--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <div class="panel">
                 <ol>
                     <li></li>
-                    <li></li>
-                    <li></li>
+                    <li>gggg</li>
+                    <li>ddd</li>
                     <li></li>
                     <li></li>
                     <li></li>
